--- a/.github/workflows/first-time-setup.yaml
+++ b/.github/workflows/first-time-setup.yaml
@@ -69,7 +69,7 @@ jobs:
       - name: Set vars for personalization
         run: |
           user="${{ github.repository_owner }}"
-          description="An engaging 1-3 sentence description of your lab."
+          description="AI Autonomy Resilience Control Lab."
           printf "USER=${user}" >> $GITHUB_ENV
           printf "DESCRIPTION=${description}" >> $GITHUB_ENV
 
