Changed cover picture

--- a/_config.yaml
+++ b/_config.yaml
@@ -2,8 +2,8 @@
 title: AARC Lab
 subtitle: AI, Autonomy, Resilience, Control Lab
 description: University Research Lab focus on AI, Autonomy, Resilience, Control for Cyber-physical Systems
-header: images/background.jpg
-footer: images/background.jpg
+header: images/city.webp
+footer: images/cover_picture.png
 proofer: false
 
 # site social media and other links
