--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 title: AARC Lab
 subtitle: AI, Autonomy, Resilience, Control Lab
 description: University Research Lab focus on AI, Autonomy, Resilience, Control for Cyber-physical Systems
-header: images/cover2.webp
+header: images/prius_platoon.png
 footer: images/cover_picture.png
 proofer: false
 
