--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,17 +1,17 @@
-- id: doi:10.1371/journal.pcbi.1007128
+- id: doi:10.1109/DESTION62938.2024.00016
   type: paper
-  description: Lorem ipsum _dolor_ **sit amet**, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-  date: 2020-12-4
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
+  description: Cyber-physical power systems, such as grids, integrate computational and communication components with physical systems to introduce novel functions and improve resilience and fault tolerance. These systems employ computational components and real-time controllers to meet power demands. Microgrids, comprising interconnected components, energy resources within defined electrical boundaries, computational elements, and controllers, offer a solution for integrating renewable energy sources and ensuring resilience in electricity demand. Simulating these cyber-physical systems (CPS) is vital for grid design, as it facilitates the modeling and control of both continuous physical processes and discrete-time power converters and controllers. This paper presents a model-based design tool for simulating cyber-physical power systems, including microgrids, using SystemC-AMS. The adoption of SystemC-AMS enables physical modeling with both native components from the SystemC-AMS library and user-defined computational elements. We observe that SystemC-AMS can accurately produce the electromagnetic transient responses essential for analyzing grid stability. Additionally, we demonstrate the effectiveness of SystemC-AMS through use cases that simulate grid-following inverters. Comparing the SystemC-AMS implementation to one in Simulink reveals that SystemC-AMS offers a more rapid simulation. A design tool like this could support microgrid designers in making informed decisions about the selection of microgrid components prior to installation and deployment.
+  date: 2024-05-13
+  image: /images/AARC_Lab_Logo.png
   buttons:
-    - type: manubot
-      link: https://greenelab.github.io/meta-review/
+    - type: paper
+      link: https://ieeexplore.ieee.org/abstract/document/10564823
     - type: source
       text: Manuscript Source
-      link: https://github.com/greenelab/meta-review
+      link: https://arxiv.org/abs/2406.17785
     - type: website
-      link: http://manubot.org/
+      link: https://arxiv.org/abs/2406.17785
   tags:
-    - open science
+    - cyber physical systems
     - collaboration
-  repo: greenelab/meta-review
+  repo: rahulbhadani/paper_DESTION_24_SystemC_GFL
