Added WSC paper

--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -32,7 +32,7 @@
     simulation. A design tool like this could support microgrid designers in making
     informed decisions about the selection of microgrid components prior to installation
     and deployment.
-  image: /images/AARC_Lab_Logo.png
+  image: /images/AARC_Lab_Logo_thumbnail.png
   buttons:
   - type: paper
     link: https://ieeexplore.ieee.org/abstract/document/10564823
@@ -57,7 +57,34 @@
   publisher: 2023 Winter Simulation Conference (WSC)
   date: '2023-12-10'
   link: https://doi.org/g52cvt
+  type: paper
+  description: "Microgrids are localized power systems that can function independently\
+    \ or alongside the main grid. They consist of interconnected generators, energy\
+    \ storage, and loads that can be managed locally. Using SystemC-AMS, we demonstrate\
+    \ how microgrid components, including solar panels and converters, can be accurately\
+    \ modeled and simulated, along with their interactions. Real-time simulations\
+    \ are crucial for understanding microgrid behavior and optimizing components.\
+    \ This approach facilitates seamless integration with hardware prototypes and\
+    \ automation systems, supporting various development stages. Our study presents\
+    \ a best-case scenario for real-time simulation, assuming each loop takes less\
+    \ time than the simulation time step, with fallback to the previous value if data\
+    \ isn\u2019t received in time. This article introduces the first known real-time\
+    \ simulation strategy using SystemC-AMS, enabling the real-time simulation of\
+    \ microgrid components and integration with external devices. The implementation\
+    \ adopts a model-based design approach, creating increasingly complex systems\
+    \ with grid components and controllers."
   orcid: 0000-0002-7403-6458
+  image: /images/AARC_Lab_Logo_thumbnail.png
+  buttons:
+  - type: paper
+    link: https://ieeexplore.ieee.org/document/10408025
+  - type: download
+    icon: fas fa-download
+    text: Download
+    link: /_papers/pdfs/WSC_2023.pdf
+  tags:
+  - cyber physical systems
+  - collaboration
   plugin: sources.py
   file: sources.yaml
 - id: doi:10.1364/oe.496792
