--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -51,17 +51,31 @@
     - collaboration
 
 - id: doi:10.1364/oe.496792
-  title: Optimized receiver design for entanglement-assisted communication using BPSK
+  title: Optimized Receiver Design for Entanglement-assisted Communication using BPSK
   authors:
   - Rahul Bhadani
   - Ivan B. Djordjevic
+  type: journal
   publisher: Optics Express
   date: '2023-11-08'
   link: https://doi.org/g52cvx
+  description: The use of pre-shared entanglement in entanglement-assisted communication offers a superior alternative to classical communication, especially in the photon-starved regime and highly noisy environments. In this paper, we analyze the performance of several low-complexity receivers that use optical parametric amplifiers. The simulations demonstrate that receivers employing an entanglement-assisted scheme with phase-shift-keying modulation can outperform classical capacities. We present a 2x2 optical hybrid receiver for entanglement-assisted communication and show that it has a roughly 10% lower error probability compared to previously proposed optical parametric amplifier-based receivers for more than 10 modes. However, the capacity of the optical parametric amplifier-based receiver exceeds the Holevo capacity and the capacities of the optical phase conjugate receiver and 2x2 optical hybrid receiver in the case of a single mode. The numerical findings indicate that surpassing the Holevo and Homodyne capacities does not require a large number of signal-idler modes. Furthermore, we find that using unequal priors for BPSK provides roughly three times the information rate advantage over equal priors.
   orcid: 0000-0002-7403-6458
+  image: /images/AARC_Lab_Logo_thumbnail.png
+  buttons:
+    - type: paper
+      link: https://opg.optica.org/oe/fulltext.cfm?uri=oe-31-24-39765&id=542310
+    - type: download
+      icon: fas fa-download
+      text: Download
+      link: /_papers/pdfs/Optica_Nov_2023.pdf
+  tags:
+    - optics
+    - quantum information science
+    - quantum communication
+
 - id: doi:10.1145/3576914.3587712
-  title: Analysis of a Runtime Data Sharing Architecture over LTE for a Heterogeneous
-    CAV Fleet
+  title: Analysis of a Runtime Data Sharing Architecture over LTE for a Heterogeneous CAV Fleet
   authors:
   - Alex Richardson
   - Matthew Walter Nice
@@ -70,13 +84,27 @@
   - Rahul Bhadani
   - Daniel Work
   - Jonathan Sprinkle
+  type: paper
   publisher: Proceedings of Cyber-Physical Systems and Internet of Things Week 2023
   date: '2023-05-09'
   link: https://doi.org/g52cv4
+  description: This paper describes a lightweight runtime architecture for telemetry, communication, and control of cars deployed with advanced driver assistance systems where a human is in the loop with the car, via an LTE connection. The system architecture supports both local control decisions based on car sensors and safety algorithms as well as high-level input from external systems that may provide insight into traffic state ahead of sensor data. Implementation of the architecture is done in ROS and depends on open-source software packages for runtime decoding of information from the vehicle's controller area network (CAN) and integration of GPS data from accompanying sensors. The contribution of the paper is to describe the overall architecture, the data it can communicate to other systems, performance of the system at runtime, and challenges faced when deploying the architecture across a heterogeneous fleet. Preliminary results from analysis of test data will provide insights into whether the use of high-latency communication can be effective for societal-scale intelligent transportation systems when applied in future scenarios.
   orcid: 0000-0002-7403-6458
+  image: /images/AARC_Lab_Logo_thumbnail.png
+  buttons:
+    - type: paper
+      link: https://dl.acm.org/doi/10.1145/3576914.3587712
+    - type: download
+      icon: fas fa-download
+      text: Download
+      link: /_papers/pdfs/Optica_Nov_2023.pdf
+  tags:
+    - cyber physical systems
+    - transportation
+    - autonomous vehicles
+
 - id: doi:10.1145/3576914.3587711
-  title: Approaches for Synthesis and Deployment of Controller Models on Automated
-    Vehicles for Car-following in Mixed Autonomy
+  title: Approaches for Synthesis and Deployment of Controller Models on Automated Vehicles for Car-following in Mixed Autonomy
   authors:
   - Rahul Bhadani
   - Matthew Bunting
@@ -89,10 +117,25 @@
   - Benjamin Seibold
   - Dan Work
   - Jonathan Sprinkle
+  type: paper
   publisher: Proceedings of Cyber-Physical Systems and Internet of Things Week 2023
   date: '2023-05-09'
   link: https://doi.org/g52cv8
+  description: This paper describes the software design patterns and vehicle interfaces that were employed to transition vehicle controllers from simulation environments to open-road field experiments. The approach relies on a life cycle that utilizes model-based design and code generation, along with agile software development, and both software- and hardware-in-the-loop testing, with additional safety margins. Autonomous designs should consider the dynamics of mixed autonomy in traffic to safely operate among humans. The software that provides a vehicle’s behavior intelligence is often developed through simulation, which may have a mismatch between dynamics, or as a result of a reinforcement learning workflow, which may be a black box with challenges to analyze. In each of these cases, it is important to have research interfaces that provide strongly typed data streams accessible to researchers who are not software experts while continuing to satisfy safety and liveness constraints. This paper describes how we design the hardware platform interfaces and software design process for a mixed autonomy traffic experiment with a leader-follower scenario. Controller synthesis for these vehicles requires clearly articulated vehicle interfaces and software design patterns for successful onboard deployment. Testing strategies for such controllers are also described before algorithms are transitioned to full-scale field experiments with safety operators for the vehicles. Testing strategies include software-in-the-loop simulation testing, hardware-in-the-loop simulation, ghost-car testing, and read-only testing in live traffic. With our approach, we were not only able to validate our controller synthesized in scripts and simulation, but also able to scale deployment to multiple vehicles.
   orcid: 0000-0002-7403-6458
+  image: /images/AARC_Lab_Logo_thumbnail.png
+  buttons:
+    - type: paper
+      link: https://dl.acm.org/doi/10.1145/3576914.3587711
+    - type: download
+      icon: fas fa-download
+      text: Download
+      link: /_papers/pdfs/CPSIoTWeek_Controller_Deployment_2023.pdf
+  tags:
+    - cyber physical systems
+    - transportation
+    - autonomous vehicles
+
 - id: doi:10.1145/3576841.3589622
   title: Parameter Estimation for Decoding Sensor Signals
   authors:
@@ -105,22 +148,34 @@
   - Alexandre Bayen
   - Dan Work
   - Jonathan Sprinkle
-  publisher: Proceedings of the ACM/IEEE 14th International Conference on Cyber-Physical
-    Systems (with CPS-IoT Week 2023)
+  type: paper
+  publisher: Proceedings of the ACM/IEEE 14th International Conference on Cyber-Physical Systems (with CPS-IoT Week 2023)
   date: '2023-05-09'
   link: https://doi.org/g52cwd
+  description: This paper introduces a parameter estimation approach for decoding digital sensor signals in a cyber-physical system. For unknown or not fully characterized digital sensor data, it can be difficult to decipher a desired signal from background or noise. In a cyber-physical system with networked sensors, we can leverage knowledge of the physical system to inform the decoding of the digital signals. This work in progress is a case study on deciphering commercial vehicle on-board sensor networks that communicate through the Controller Area Network (CAN). By understanding the stock vehicle sensor network, a vehicle can be extended into a scalable research platform with minimal instrumentation. Our challenge was to localize desired sensor signals encoded in network traffic that included other sensor data, control messages, as well as encoding and security overhead. Due to the vehicle's unknown sensor network, our approach developed methods to efficiently analyze and identify key signals despite the large state-space for potential signal embeddings. The contribution of this work-in-progress is a formal approach to deciphering pertinent signals uncharacterized cyber-physical system, with a case study in using this approach in vehicle on-board sensor networks. We share a code repository with analysis tools for analyzing digital signals.
   orcid: 0000-0002-7403-6458
+  image: /images/AARC_Lab_Logo_thumbnail.png
+  buttons:
+    - type: paper
+      link: https://dl.acm.org/doi/10.1145/3576841.3589622
+
 - id: doi:10.3390/GENES14020506
-  title: Attention-Based Graph Neural Network for Label Propagation in Single-Cell
-    Omics
+  title: Attention-Based Graph Neural Network for Label Propagation in Single-Cell Omics
   authors:
   - Rahul Bhadani
   - Zhuo Chen
   - Lingling An
-  publisher: Genes
+  type: journal
+  publisher: MDPI Genes
   date: '2023-02-16'
   link: https://doi.org/g52cwg
+  description: Single-cell data analysis has been at forefront of development in biology and medicine since sequencing data have been made available. An important challenge in single-cell data analysis is the identification of cell types. Several methods have been proposed for cell-type identification. However, these methods do not capture the higher-order topological relationship between different samples. In this work, we propose an attention-based graph neural network that captures the higher-order topological relationship between different samples and performs transductive learning for predicting cell types. The evaluation of our method on both simulation and publicly available datasets demonstrates the superiority of our method, scAGN, in terms of prediction accuracy. In addition, our method works best for highly sparse datasets in terms of F1 score, precision score, recall score, and Matthew’s correlation coefficients as well. Further, our method’s runtime complexity is consistently faster compared to other methods.
   orcid: 0000-0002-7403-6458
+  image: /images/AARC_Lab_Logo_thumbnail.png
+  buttons:
+    - type: paper
+      link: https://www.mdpi.com/2073-4425/14/2/506
+
 - id: doi:10.1109/destion56136.2022.00016
   title: Repeatable &amp; Scalable Multi-Vehicle Simulation with Offloaded Dynamics
     using Federated Modeling
@@ -150,8 +205,7 @@
   - Rahul Bhadani
   - Jonathan Sprinkle
   - K. Larry Head
-  publisher: 2022 ACM/IEEE 13th International Conference on Cyber-Physical Systems
-    (ICCPS)
+  publisher: 2022 ACM/IEEE 13th International Conference on Cyber-Physical Systems (ICCPS)
   date: '2022-05-01'
   link: https://doi.org/g52cwp
   orcid: 0000-0002-7403-6458
@@ -189,8 +243,7 @@
   - Safwan Elmadani
   - Dan Work
   - Jonathan Sprinkle
-  publisher: 2022 2nd Workshop on Data-Driven and Intelligent Cyber-Physical Systems
-    for Smart Cities Workshop (DI-CPS)
+  publisher: 2022 2nd Workshop on Data-Driven and Intelligent Cyber-Physical Systems for Smart Cities Workshop (DI-CPS)
   date: '2022-05-01'
   link: https://doi.org/g52cwz
   orcid: 0000-0002-7403-6458
@@ -214,7 +267,7 @@
   link: https://doi.org/gg9cjq
   orcid: 0000-0002-7403-6458
 - id: doi:10.1145/3450267.3450541
-  title: CAN coach
+  title: 'CAN coach: vehicular control through human cyber-physical systems'
   authors:
   - Matthew Nice
   - Safwan Elmadani
